2005-11-12 15:33 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormScrollViewAttributesInspector.m: Corrected problem
	reported by Matt Rice with table column selection.

2005-11-04 00:20 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormCustomClassInspector.m: Corrected problem with cell.

2005-11-02 20:17 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormFilePrefsManager.m: Updated version to 1.0.1
	* GormInfo.plist: Same
	* Palettes/2Controls/GormNSTextFieldInspector.gorm: Corrected resize
	issues.

2005-10-29 09:09 Gregory John Casamento <greg_casamento@yahoo.com>

	* Version 1.0.0
	
2005-10-29 09:04 Gregory John Casamento <greg_casamento@yahoo.com>

	* ANNOUNCE: Updated for 1.0
	* Documentation/news.texi: Updated for 1.0
	* INSTALL: Updated for 1.0
	* NEWS: Updated for 1.0
	* README: Updated for 1.0
	* Version: Updated for 1.0
	* GormCore/GormCustomClassInspector.m: Fixed minor problem 
	updating cell.

2005-10-05 20:21 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormNSWindowSizeInspector.gorm: Remove delegate 
	from sizeForm and connect to ok:
	* Palettes/1Windows/GormWindowSizeInspector.m: Cleanup in ok: and other
	methods.

2005-10-05  fabien  <fabien@sonappart.net>

	* Palettes/2Controls/GormButtonAttributesInspector.m : 
	Add delegate method for forms

2005-10-05 00:21 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormNSWindowInspector.gorm: Corrected spelling
	of "deactivate" on Window Inspector.

2005-10-04 20:57 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormScrollViewAttributesInspector.m: In category
	IBObjectAdditions, for editorClassName, return only 
	GormScrollViewEditor.
	* GormCore/GormScrollViewEditor.m: Cleanup.

2005-09-29 19:38 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormConnectionInspector.m: Corrected resizing attributes in
	the GormInspectorManager setCurrentInspector: method.